--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/sharafian/ilp-plugin-xrp-payment/issues"
   },
-  "homepage": "https://github.com/sharafian/ilp-plugin-xrp-payment#readme"
+  "homepage": "https://github.com/sharafian/ilp-plugin-xrp-payment#readme",
+  "dependencies": {
+    "bignumber.js": "^6.0.0",
+    "eventemitter2": "^5.0.1",
+    "ilp-plugin-btp": "^1.1.9",
+    "ilp-plugin-mini-accounts": "^3.4.4",
+    "ilp-plugin-xrp-paychan-shared": "^3.0.2",
+    "ripple-keypairs": "^0.10.1",
+    "ripple-lib": "^0.20.0"
+  }
 }
