--- a/package.json
+++ b/package.json
@@ -1,21 +1,21 @@
 {
-  "name": "ilp-plugin-xrp-payment",
+  "name": "ilp-plugin-payment",
   "version": "0.0.1",
-  "description": "Settle ILP connection with XRP payments",
+  "description": "Base class for settling ILP connection with payments",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/sharafian/ilp-plugin-xrp-payment.git"
+    "url": "git+https://github.com/sharafian/ilp-plugin-payment.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/sharafian/ilp-plugin-xrp-payment/issues"
+    "url": "https://github.com/sharafian/ilp-plugin-payment/issues"
   },
-  "homepage": "https://github.com/sharafian/ilp-plugin-xrp-payment#readme",
+  "homepage": "https://github.com/sharafian/ilp-plugin-payment#readme",
   "dependencies": {
     "bignumber.js": "^6.0.0",
     "eventemitter2": "^5.0.1",
