--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "bignumber.js": "^6.0.0",
     "eventemitter2": "^5.0.1",
     "ilp-plugin-btp": "^1.1.9",
-    "ilp-plugin-mini-accounts": "^3.4.4",
+    "ilp-plugin-mini-accounts": "^3.4.4"
+  },
+  "devDependencies": {
     "ilp-plugin-xrp-paychan-shared": "^3.0.2",
     "ripple-keypairs": "^0.10.1",
     "ripple-lib": "^0.20.0"
